// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextareaField /> Default story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="textarea-field w-[384px]"
  >
    <div
      class="textarea-field__overline"
    >
      <label
        class="label label--md"
        for=":r0:"
      >
        <span
          class="text text--label-md"
        >
          Textarea Field
        </span>
      </label>
    </div>
    <textarea
      aria-describedby=""
      class="textarea"
      id=":r0:"
      placeholder="Enter long-form text here"
      rows="5"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
  </div>
</div>
`;

exports[`<TextareaField /> WhenDefaultStatus story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="textarea-field w-[384px]"
  >
    <div
      class="textarea-field__overline"
    >
      <label
        class="label label--md"
        for=":rf:"
      >
        <span
          class="text text--label-md"
        >
          Textarea Field
        </span>
      </label>
      <div
        class="textarea-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":rh:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <textarea
      aria-describedby=":rh: :rg:"
      class="textarea"
      id=":rf:"
      placeholder="Enter long-form text here"
      rows="5"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="textarea-field__footer"
    >
      <div
        class="field-note textarea-field__field-note"
        id=":rg:"
      >
        <span
          class="text text--body-sm"
        >
          Text should be at least 100 characters
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> WhenDisabled story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="textarea-field w-[384px]"
  >
    <div
      class="textarea-field__overline textarea-field__overline--disabled"
    >
      <label
        class="label label--md textarea-field__label--disabled"
        for=":r9:"
      >
        <span
          class="text text--label-md"
        >
          Textarea Field
        </span>
      </label>
      <div
        class="textarea-field__subLabel textarea-field__label--disabled"
      >
        <span
          class="text text--body-sm"
          id=":rb:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <textarea
      aria-describedby=":rb: :ra:"
      aria-disabled="true"
      class="textarea textarea--disabled"
      disabled=""
      id=":r9:"
      placeholder="Enter long-form text here"
      rows="2"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="textarea-field__footer"
    >
      <div
        aria-disabled="true"
        class="field-note field-note--disabled textarea-field__field-note"
        id=":ra:"
      >
        <span
          class="text text--body-sm"
        >
          Validation information or error details about the input.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> WhenError story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="textarea-field w-[384px]"
  >
    <div
      class="textarea-field__overline"
    >
      <label
        class="label label--md"
        for=":ri:"
      >
        <span
          class="text text--label-md"
        >
          Textarea Field
        </span>
      </label>
      <div
        class="textarea-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":rk:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <textarea
      aria-describedby=":rk: :rj:"
      class="textarea error"
      id=":ri:"
      placeholder="Enter long-form text here"
      rows="5"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="textarea-field__footer"
    >
      <div
        class="field-note field-note--error textarea-field__field-note"
        id=":rj:"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="16px"
          role="img"
          style="--icon-size: 16px;"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            error
          </title>
          <path
            d="M12 16.4615C12.1743 16.4615 12.3205 16.4025 12.4385 16.2845C12.5565 16.1667 12.6155 16.0206 12.6155 15.8462C12.6155 15.6717 12.5565 15.5256 12.4385 15.4078C12.3205 15.2898 12.1743 15.2308 12 15.2308C11.8257 15.2308 11.6795 15.2898 11.5615 15.4078C11.4435 15.5256 11.3845 15.6717 11.3845 15.8462C11.3845 16.0206 11.4435 16.1667 11.5615 16.2845C11.6795 16.4025 11.8257 16.4615 12 16.4615ZM12.0008 13.1537C12.1426 13.1537 12.2612 13.1058 12.3567 13.01C12.4522 12.9142 12.5 12.7954 12.5 12.6537V7.65375C12.5 7.51208 12.452 7.39333 12.356 7.2975C12.26 7.20167 12.1411 7.15375 11.9993 7.15375C11.8574 7.15375 11.7388 7.20167 11.6433 7.2975C11.5478 7.39333 11.5 7.51208 11.5 7.65375V12.6537C11.5 12.7954 11.548 12.9142 11.644 13.01C11.74 13.1058 11.8589 13.1537 12.0008 13.1537ZM12.0033 21C10.7588 21 9.58867 20.7638 8.493 20.2915C7.3975 19.8192 6.4445 19.1782 5.634 18.3685C4.8235 17.5588 4.18192 16.6067 3.70925 15.512C3.23642 14.4175 3 13.2479 3 12.0033C3 10.7588 3.23617 9.58867 3.7085 8.493C4.18083 7.3975 4.82183 6.4445 5.6315 5.634C6.44117 4.8235 7.39333 4.18192 8.488 3.70925C9.5825 3.23642 10.7521 3 11.9968 3C13.2413 3 14.4113 3.23617 15.507 3.7085C16.6025 4.18083 17.5555 4.82183 18.366 5.6315C19.1765 6.44117 19.8181 7.39333 20.2908 8.488C20.7636 9.5825 21 10.7521 21 11.9968C21 13.2413 20.7638 14.4113 20.2915 15.507C19.8192 16.6025 19.1782 17.5555 18.3685 18.366C17.5588 19.1765 16.6067 19.8181 15.512 20.2908C14.4175 20.7636 13.2479 21 12.0033 21Z"
          />
        </svg>
        <span
          class="text text--body-sm"
        >
          Text should be at least 100 characters
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> WhenNoDefaultValue story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="textarea-field w-[384px]"
  >
    <div
      class="textarea-field__overline"
    >
      <label
        class="label label--md"
        for=":r3:"
      >
        <span
          class="text text--label-md"
        >
          Textarea Field
        </span>
      </label>
      <div
        class="textarea-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":r5:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <textarea
      aria-describedby=":r5:"
      class="textarea"
      id=":r3:"
      placeholder="Enter long-form text here"
      rows="5"
      spellcheck="false"
    />
  </div>
</div>
`;

exports[`<TextareaField /> WhenOptional story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="textarea-field w-[384px]"
  >
    <div
      class="textarea-field__overline"
    >
      <label
        class="label label--md"
        for=":rr:"
      >
        <span
          class="text text--label-md"
        >
          Textarea Field
        </span>
      </label>
      <span
        class="text text--body-sm textarea-field__hint"
      >
        (Optional)
      </span>
      <div
        class="textarea-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":rt:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <textarea
      aria-describedby=":rt: :rs:"
      class="textarea"
      id=":rr:"
      placeholder="Enter long-form text here"
      rows="5"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="textarea-field__footer"
    >
      <div
        class="field-note textarea-field__field-note"
        id=":rs:"
      >
        <span
          class="text text--body-sm"
        >
          Validation information or error details about the input.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> WhenReadOnly story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="textarea-field w-[384px]"
  >
    <div
      class="textarea-field__overline"
    >
      <label
        class="label label--md"
        for=":rc:"
      >
        <span
          class="text text--label-md"
        >
          Textarea Field
        </span>
      </label>
      <div
        class="textarea-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":re:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <textarea
      aria-describedby=":re: :rd:"
      class="textarea textarea-field__textarea--read-only"
      id=":rc:"
      placeholder="Enter long-form text here"
      readonly=""
      rows="2"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="textarea-field__footer"
    >
      <div
        class="field-note textarea-field__field-note"
        id=":rd:"
      >
        <span
          class="text text--body-sm"
        >
          Validation information or error details about the input.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> WhenRequired story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="textarea-field w-[384px]"
  >
    <div
      class="textarea-field__overline"
    >
      <label
        class="label label--md"
        for=":ro:"
      >
        <span
          class="text text--label-md"
        >
          Textarea Field
        </span>
      </label>
      <span
        class="text text--body-sm textarea-field__hint"
      >
        (Required)
      </span>
      <div
        class="textarea-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":rq:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <textarea
      aria-describedby=":rq: :rp:"
      class="textarea"
      id=":ro:"
      placeholder="Enter long-form text here"
      required=""
      rows="5"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="textarea-field__footer"
    >
      <div
        class="field-note textarea-field__field-note"
        id=":rp:"
      >
        <span
          class="text text--body-sm"
        >
          Validation information or error details about the input.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> WhenUsingValue story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="textarea-field w-[384px]"
  >
    <div
      class="textarea-field__overline"
    >
      <label
        class="label label--md"
        for=":r6:"
      >
        <span
          class="text text--label-md"
        >
          Textarea Field
        </span>
      </label>
      <div
        class="textarea-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":r8:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <textarea
      aria-describedby=":r8:"
      class="textarea"
      id=":r6:"
      placeholder="Enter long-form text here"
      rows="5"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
  </div>
</div>
`;

exports[`<TextareaField /> WhenWarning story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="textarea-field w-[384px]"
  >
    <div
      class="textarea-field__overline"
    >
      <label
        class="label label--md"
        for=":rl:"
      >
        <span
          class="text text--label-md"
        >
          Textarea Field
        </span>
      </label>
      <div
        class="textarea-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":rn:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <textarea
      aria-describedby=":rn: :rm:"
      class="textarea warning"
      id=":rl:"
      placeholder="Enter long-form text here"
      rows="5"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="textarea-field__footer"
    >
      <div
        class="field-note field-note--warning textarea-field__field-note"
        id=":rm:"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="16px"
          role="img"
          style="--icon-size: 16px;"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            warning
          </title>
          <path
            d="M4.12573 19.9999C3.97006 19.9999 3.83231 19.9629 3.71248 19.8889C3.59248 19.8149 3.49923 19.7173 3.43273 19.5961C3.36006 19.4768 3.32006 19.3476 3.31273 19.2086C3.30556 19.0695 3.34448 18.9292 3.42948 18.7879L11.3012 5.21187C11.3862 5.07053 11.4887 4.96778 11.6087 4.90362C11.7286 4.83962 11.859 4.80762 12 4.80762C12.141 4.80762 12.2714 4.83962 12.3912 4.90362C12.5112 4.96778 12.6137 5.07053 12.6987 5.21187L20.5705 18.7879C20.6555 18.9292 20.6944 19.0695 20.6872 19.2086C20.6799 19.3476 20.6399 19.4768 20.5672 19.5961C20.5007 19.7173 20.4075 19.8149 20.2875 19.8889C20.1676 19.9629 20.0299 19.9999 19.8742 19.9999H4.12573ZM12 17.6154C12.1743 17.6154 12.3205 17.5564 12.4385 17.4384C12.5565 17.3204 12.6155 17.1742 12.6155 16.9999C12.6155 16.8255 12.5565 16.6794 12.4385 16.5614C12.3205 16.4434 12.1743 16.3844 12 16.3844C11.8256 16.3844 11.6795 16.4434 11.5615 16.5614C11.4435 16.6794 11.3845 16.8255 11.3845 16.9999C11.3845 17.1742 11.4435 17.3204 11.5615 17.4384C11.6795 17.5564 11.8256 17.6154 12 17.6154ZM12.0007 15.3844C12.1426 15.3844 12.2612 15.3365 12.3567 15.2406C12.4522 15.1448 12.5 15.026 12.5 14.8844V10.8844C12.5 10.7427 12.452 10.624 12.356 10.5281C12.26 10.4323 12.1411 10.3844 11.9992 10.3844C11.8574 10.3844 11.7387 10.4323 11.6432 10.5281C11.5477 10.624 11.5 10.7427 11.5 10.8844V14.8844C11.5 15.026 11.548 15.1448 11.644 15.2406C11.74 15.3365 11.8589 15.3844 12.0007 15.3844Z"
          />
        </svg>
        <span
          class="text text--body-sm"
        >
          Text should be at least 100 characters
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> WithADifferentSize story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="textarea-field w-[384px]"
  >
    <div
      class="textarea-field__overline"
    >
      <label
        class="label label--md"
        for=":ru:"
      >
        <span
          class="text text--label-md"
        >
          Textarea Field
        </span>
      </label>
      <div
        class="textarea-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":r10:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <textarea
      aria-describedby=":r10: :rv:"
      class="textarea"
      id=":ru:"
      placeholder="Enter long-form text here"
      rows="10"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="textarea-field__footer"
    >
      <div
        class="field-note textarea-field__field-note"
        id=":rv:"
      >
        <span
          class="text text--body-sm"
        >
          Validation information or error details about the input.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> WithAMaxLength story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="textarea-field w-[384px]"
  >
    <div
      class="textarea-field__overline"
    >
      <label
        class="label label--md"
        for=":r11:"
      >
        <span
          class="text text--label-md"
        >
          Textarea Field
        </span>
      </label>
      <p
        class="text text--body-sm textarea-field__character-counter"
      >
        <span
          class="textarea-field--invalid-length"
        >
          202
        </span>
         
        / 
        144
      </p>
      <div
        class="textarea-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":r13:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <textarea
      aria-describedby=":r13: :r12:"
      class="textarea error"
      id=":r11:"
      maxlength="144"
      placeholder="Enter long-form text here"
      required=""
      rows="10"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="textarea-field__footer"
    >
      <div
        class="field-note field-note--error textarea-field__field-note"
        id=":r12:"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="16px"
          role="img"
          style="--icon-size: 16px;"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            error
          </title>
          <path
            d="M12 16.4615C12.1743 16.4615 12.3205 16.4025 12.4385 16.2845C12.5565 16.1667 12.6155 16.0206 12.6155 15.8462C12.6155 15.6717 12.5565 15.5256 12.4385 15.4078C12.3205 15.2898 12.1743 15.2308 12 15.2308C11.8257 15.2308 11.6795 15.2898 11.5615 15.4078C11.4435 15.5256 11.3845 15.6717 11.3845 15.8462C11.3845 16.0206 11.4435 16.1667 11.5615 16.2845C11.6795 16.4025 11.8257 16.4615 12 16.4615ZM12.0008 13.1537C12.1426 13.1537 12.2612 13.1058 12.3567 13.01C12.4522 12.9142 12.5 12.7954 12.5 12.6537V7.65375C12.5 7.51208 12.452 7.39333 12.356 7.2975C12.26 7.20167 12.1411 7.15375 11.9993 7.15375C11.8574 7.15375 11.7388 7.20167 11.6433 7.2975C11.5478 7.39333 11.5 7.51208 11.5 7.65375V12.6537C11.5 12.7954 11.548 12.9142 11.644 13.01C11.74 13.1058 11.8589 13.1537 12.0008 13.1537ZM12.0033 21C10.7588 21 9.58867 20.7638 8.493 20.2915C7.3975 19.8192 6.4445 19.1782 5.634 18.3685C4.8235 17.5588 4.18192 16.6067 3.70925 15.512C3.23642 14.4175 3 13.2479 3 12.0033C3 10.7588 3.23617 9.58867 3.7085 8.493C4.18083 7.3975 4.82183 6.4445 5.6315 5.634C6.44117 4.8235 7.39333 4.18192 8.488 3.70925C9.5825 3.23642 10.7521 3 11.9968 3C13.2413 3 14.4113 3.23617 15.507 3.7085C16.6025 4.18083 17.5555 4.82183 18.366 5.6315C19.1765 6.44117 19.8181 7.39333 20.2908 8.488C20.7636 9.5825 21 10.7521 21 11.9968C21 13.2413 20.7638 14.4113 20.2915 15.507C19.8192 16.6025 19.1782 17.5555 18.3685 18.366C17.5588 19.1765 16.6067 19.8181 15.512 20.2908C14.4175 20.7636 13.2479 21 12.0033 21Z"
          />
        </svg>
        <span
          class="text text--body-sm"
        >
          Validation information or error details about the input.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> WithARecommendedLength story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="textarea-field w-[384px]"
  >
    <div
      class="textarea-field__overline"
    >
      <label
        class="label label--md"
        for=":r14:"
      >
        <span
          class="text text--label-md"
        >
          Textarea Field
        </span>
      </label>
      <p
        class="text text--body-sm textarea-field__character-counter"
      >
        <span
          class="textarea-field--invalid-length"
        >
          202
        </span>
         
        / 
        144
      </p>
      <div
        class="textarea-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":r16:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <textarea
      aria-describedby=":r16: :r15:"
      class="textarea error"
      id=":r14:"
      placeholder="Enter long-form text here"
      required=""
      rows="10"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="textarea-field__footer"
    >
      <div
        class="field-note field-note--error textarea-field__field-note"
        id=":r15:"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="16px"
          role="img"
          style="--icon-size: 16px;"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            error
          </title>
          <path
            d="M12 16.4615C12.1743 16.4615 12.3205 16.4025 12.4385 16.2845C12.5565 16.1667 12.6155 16.0206 12.6155 15.8462C12.6155 15.6717 12.5565 15.5256 12.4385 15.4078C12.3205 15.2898 12.1743 15.2308 12 15.2308C11.8257 15.2308 11.6795 15.2898 11.5615 15.4078C11.4435 15.5256 11.3845 15.6717 11.3845 15.8462C11.3845 16.0206 11.4435 16.1667 11.5615 16.2845C11.6795 16.4025 11.8257 16.4615 12 16.4615ZM12.0008 13.1537C12.1426 13.1537 12.2612 13.1058 12.3567 13.01C12.4522 12.9142 12.5 12.7954 12.5 12.6537V7.65375C12.5 7.51208 12.452 7.39333 12.356 7.2975C12.26 7.20167 12.1411 7.15375 11.9993 7.15375C11.8574 7.15375 11.7388 7.20167 11.6433 7.2975C11.5478 7.39333 11.5 7.51208 11.5 7.65375V12.6537C11.5 12.7954 11.548 12.9142 11.644 13.01C11.74 13.1058 11.8589 13.1537 12.0008 13.1537ZM12.0033 21C10.7588 21 9.58867 20.7638 8.493 20.2915C7.3975 19.8192 6.4445 19.1782 5.634 18.3685C4.8235 17.5588 4.18192 16.6067 3.70925 15.512C3.23642 14.4175 3 13.2479 3 12.0033C3 10.7588 3.23617 9.58867 3.7085 8.493C4.18083 7.3975 4.82183 6.4445 5.6315 5.634C6.44117 4.8235 7.39333 4.18192 8.488 3.70925C9.5825 3.23642 10.7521 3 11.9968 3C13.2413 3 14.4113 3.23617 15.507 3.7085C16.6025 4.18083 17.5555 4.82183 18.366 5.6315C19.1765 6.44117 19.8181 7.39333 20.2908 8.488C20.7636 9.5825 21 10.7521 21 11.9968C21 13.2413 20.7638 14.4113 20.2915 15.507C19.8192 16.6025 19.1782 17.5555 18.3685 18.366C17.5588 19.1765 16.6067 19.8181 15.512 20.2908C14.4175 20.7636 13.2479 21 12.0033 21Z"
          />
        </svg>
        <span
          class="text text--body-sm"
        >
          Validation information or error details about the input.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> WithBothRecommendedAndMaxLengths story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="textarea-field w-[384px]"
  >
    <div
      class="textarea-field__overline"
    >
      <label
        class="label label--md"
        for=":r17:"
      >
        <span
          class="text text--label-md"
        >
          Textarea Field
        </span>
      </label>
      <p
        class="text text--body-sm textarea-field__character-counter"
      >
        <span
          class="textarea-field--invalid-length"
        >
          202
        </span>
         
        / 
        144
      </p>
      <div
        class="textarea-field__subLabel"
      >
        <span
          class="text text--body-sm"
          id=":r19:"
        >
          Additional descriptive text for the field.
        </span>
      </div>
    </div>
    <textarea
      aria-describedby=":r19: :r18:"
      class="textarea error"
      id=":r17:"
      maxlength="256"
      placeholder="Enter long-form text here"
      required=""
      rows="10"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="textarea-field__footer"
    >
      <div
        class="field-note field-note--error textarea-field__field-note"
        id=":r18:"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="16px"
          role="img"
          style="--icon-size: 16px;"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            error
          </title>
          <path
            d="M12 16.4615C12.1743 16.4615 12.3205 16.4025 12.4385 16.2845C12.5565 16.1667 12.6155 16.0206 12.6155 15.8462C12.6155 15.6717 12.5565 15.5256 12.4385 15.4078C12.3205 15.2898 12.1743 15.2308 12 15.2308C11.8257 15.2308 11.6795 15.2898 11.5615 15.4078C11.4435 15.5256 11.3845 15.6717 11.3845 15.8462C11.3845 16.0206 11.4435 16.1667 11.5615 16.2845C11.6795 16.4025 11.8257 16.4615 12 16.4615ZM12.0008 13.1537C12.1426 13.1537 12.2612 13.1058 12.3567 13.01C12.4522 12.9142 12.5 12.7954 12.5 12.6537V7.65375C12.5 7.51208 12.452 7.39333 12.356 7.2975C12.26 7.20167 12.1411 7.15375 11.9993 7.15375C11.8574 7.15375 11.7388 7.20167 11.6433 7.2975C11.5478 7.39333 11.5 7.51208 11.5 7.65375V12.6537C11.5 12.7954 11.548 12.9142 11.644 13.01C11.74 13.1058 11.8589 13.1537 12.0008 13.1537ZM12.0033 21C10.7588 21 9.58867 20.7638 8.493 20.2915C7.3975 19.8192 6.4445 19.1782 5.634 18.3685C4.8235 17.5588 4.18192 16.6067 3.70925 15.512C3.23642 14.4175 3 13.2479 3 12.0033C3 10.7588 3.23617 9.58867 3.7085 8.493C4.18083 7.3975 4.82183 6.4445 5.6315 5.634C6.44117 4.8235 7.39333 4.18192 8.488 3.70925C9.5825 3.23642 10.7521 3 11.9968 3C13.2413 3 14.4113 3.23617 15.507 3.7085C16.6025 4.18083 17.5555 4.82183 18.366 5.6315C19.1765 6.44117 19.8181 7.39333 20.2908 8.488C20.7636 9.5825 21 10.7521 21 11.9968C21 13.2413 20.7638 14.4113 20.2915 15.507C19.8192 16.6025 19.1782 17.5555 18.3685 18.366C17.5588 19.1765 16.6067 19.8181 15.512 20.2908C14.4175 20.7636 13.2479 21 12.0033 21Z"
          />
        </svg>
        <span
          class="text text--body-sm"
        >
          Validation information or error details about the input.
        </span>
      </div>
    </div>
  </div>
</div>
`;
